<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/fastcharge_category_title">
        <ListPreference
            android:key="fastcharge_normal"
            android:title="@string/fastcharge_normal_title"
            android:entries="@array/fastcharge_modes_entries"
            android:entryValues="@array/fastcharge_modes_values"
            android:defaultValue="2"
            android:persistent="true" />
            
        <SwitchPreferenceCompat
            android:key="fastcharge_usb"
            android:title="@string/fastcharge_usb_title"
            android:summary="@string/fastcharge_usb_summary"
            android:persistent="true" />


	<SwitchPreferenceCompat
    	    android:key="thermal_boost"
    	    android:title="@string/fastcharge_thermal_title"
            android:summary="@string/fastcharge_thermal_summary"
            android:defaultValue="false" />

	<SwitchPreferenceCompat
            android:key="bypass_charge"
            android:title="@string/fastcharge_bypass_title"
            android:summary="@string/fastcharge_bypass_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
